# wepppy

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .markdown-doc-ignore  .stylelintrc.json  AGENTIC_AI_SYSTEMS_MANIFESTO.md  AGENTS.md  AI_AUTHORITY_DOCTRINE.md  AI_AUTHORITY_OPERATING_PRACTICES.md  API_REFERENCE.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING_AGENTS.md  DOC_CATALOG.md  Makefile  PROJECT_TRACKER.md  README.vscode.md  TYPE_HINTS_SUMMARY.md  _badges.md  buff_landuse_validation.py  chile.db  code-quality-observability.md  code-quality-observability.yml  code-quality-report.json  code-quality-summary.md  docs-monthly-work-log.md  f_esri.py  full_cloc.py  git_stash_and_pull.sh  license.txt  mypy.ini  path.spec.md  pyproject.toml  readme.md  requirements.txt  sub_fields_abstraction.spec.md  trl-assessment.md  wctl2  wepppy310-env.yaml
.claude/: settings.json
services/cao/: .gitignore  .tmux.conf  AGENTS.md  CODEBASE.md  NOTICE  README.md  cao-potential-applications.md  ci-samurai.md  pyproject.toml  tmux-install.sh
services/cao/.github/ISSUE_TEMPLATE/: feature_request.md
services/cao/ci-samurai/: AGENTS.md  README.md  agent-prompt.md  benchmark-research.md  diagnose_artifact.py  parse_pytest_log.py  run_fixer_loop.py
services/cao/docs/: agent-profile.md  api.md  commercial-text-processing-stacks.md  doc-janitor-flow.md  infra-for-text-processing.md
services/cao/docs/assets/: handoff-workflow.mmd  multi-role-feature-development.mmd  parallel-data-analysis.mmd  parallel-test-execution.mmd
services/cao/scripts/: README.md  ci_samurai_dryrun.sh  install_cao_server_as_service.sh  setup_venv.sh  weppcloud_deploy.sh  wojak_bootstrap.py
services/cao/systemd/: cao-server.service
services/cao/test/: conftest.py  test_flow_service.py
services/cao/tests/: conftest.py
(+74436 files in other folders)
